css: make dropdowns visible and fix disable

--- a/app/assets/stylesheets/common/_markus.scss
+++ b/app/assets/stylesheets/common/_markus.scss
@@ -177,7 +177,7 @@ textarea {
   &[disabled] {
     background-color: $disabled;
     border-color: $background-support;
-    color: $background-support;
+    color: $sharp-line;
   }
 
   &[readonly] {
@@ -211,8 +211,9 @@ textarea {
 }
 
 select {
-  background: none;
-  border: 1px solid $background-support;
+  background: $background-main;
+  color: $line;
+  border: 1px solid $sharp-line;
   border-radius: $radius;
   font-family: $fonts;
   margin: 5px;
